--- a/views/html5-css3/html5/05/page.html
+++ b/views/html5-css3/html5/05/page.html
@@ -17,9 +17,11 @@
             color:white;
         }
         a:link{text-decoration: none}
-         a:hover {color:red;}
-        a:visited{color:white;}
+
+       a:visited{color:pink;}
+       a:hover{color:red;}
         a:active{color:blue;}
+
         .headline{
             float:left;
         }
@@ -36,6 +38,13 @@ color:gray;
             float:left;
             margin-left:50px;
             margin-top:20px;
+        }
+.content tr{
+    height:30px;
+}
+        .content1{
+            border:1px dashed gray;
+
         }
 
     </style>
@@ -81,14 +90,23 @@ color:gray;
 
 <div class="content">
     <table border="0" cellspacing="2" width="700">
-<tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
-        <tr><td width="600px">我与他的婚外情,选择睁一只眼闭一只眼</td><td width="100">老公多次出轨</td></tr>
+<div class="content1">
+           <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+            <tr><td width="600px">我与他的婚外情,选择睁一只眼闭一只眼</td><td width="100">老公多次出轨</td></tr>
+            <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+        <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+</div>
+        <div class="content2">
+
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
-        <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
-        <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+
+
+        </div>
+<div class="content3">
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
 
@@ -98,9 +116,10 @@ color:gray;
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
         <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
-        <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
-        <tr><td>我与他的婚外情</td><td>老公多次出轨</td></tr>
+</div>
 
+    </table>
+    <hr/>
 </div>
 </div>
 </body>
