--- a/views/html5-css3/html5/04/form.html
+++ b/views/html5-css3/html5/04/form.html
@@ -9,6 +9,14 @@
     <input placeholder="请输入" type="text" required>
     <input type="button">
     <input type="submit">
+    <input type="number" required>
+    <input type="email" required>
+    <input type="date" required>
+    <input type="tel" required>
+    <input type="range" required>
+   <input type="url"required>
+    <input type="search" required>
+
 </form>
 <textarea name="" id="" cols="30" rows="10" form="form"></textarea>
 </body>
