--- a/views/html5-css3/css3/04/homepage.html
+++ b/views/html5-css3/css3/04/homepage.html
@@ -3,156 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>homepage</title>
-    <style>
-        .head{
-            margin:0% 3%;
-        }
-        .head-1{
-            float:left;
-        }
-        .head-1-1{
-            float:left;
-            margin:0px 50px 0px 150px;
-        }
-        .head-1-2{
-            float:left;
-            margin-left:50px;
-        }
-        .head-2{
-            float:right;
-        }
-        .button1{
-            border:1px solid red;
-            background-color: white;
-            border-radius:5px;
-            width:90px;
-            height:30px;
-        }
-        .head-2-1{
-float:right;
-            background-color: red;
-            width:110px;
-            text-align: center;
-            border-radius:5px;
-            height:30px;
-            line-height:30px;
-        }
-        .head-2-2{
-            float:right;
-            margin:0px 50px;
-        }
-        .head-2-3{
-            float:right;
-            margin-right:50px;
-        }
-        .pic{
-
-            margin:20px 200px;
-        }
-        .pic-1{
-            width:700px;
-            height:400px;
-            float:left;
-
-        }
-        .pic-2{
-            width:200px;
-            height:70px;
-            float:right;
-        }
-        .pic-3{
-            width:200px;
-            height:70px;
-            float:right;
-            margin:30px 0px;
-        }
-        .pic-4{
-            width:200px;
-            height:70px;
-            float:right;
-
-        }
-        .pic-5{
-            width:200px;
-            height:220px;
-            float:right;
-            margin:30px 0px;
-        }
-.pic-6{
-
-
-    width:100px;
-    height:100px;
-    position: absolute;
-    left: 210px;
-    top: 480px;
-
-}
-        .pic-7{
-            width:100px;
-            height:100px;
-            position: absolute;
-            left: 330px;
-            top: 480px;
-        }
-        .pic-8{
-            width:100px;
-            height:100px;
-            position: absolute;
-            left: 450px;
-            top: 480px;
-        }
-        .pic-9{
-            width:100px;
-            height:100px;
-            position: absolute;
-            left: 570px;
-            top: 480px;
-        }
-        .pic-10{
-            width:100px;
-            height:100px;
-            position: absolute;
-            left: 690px;
-            top: 480px;
-        }
-        .pic-11{
-            width:100px;
-            height:100px;
-            position: absolute;
-            left: 810px;
-            top: 480px;
-        }
-    </style>
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
 <div class="head">
-
-    <div class="head-1"><font size="6" color="red"><b>简书</b></font></div>
-    <div class="head-1-1"><font size="5" color="red">首页</font></div>
-    <div class="head-1"><font size="5" >下载APP</font></div>
+    <div class="head-1"><a href=""><font size="6" color="red"><b>简书</b></font></a></div>
+    <div class="head-1-1"><a href=""><font size="5" color="red">首页</font></a></div>
+    <div class="head-1"><a href=""><font size="5" >下载APP</font></a></div>
     <div class="head-1-2">
         <input type="text" placeholder="搜索">
     </div>
-    <div class="head-2-1"><font size="4" color="white">写文章</font></div>
-    <div class="head-2-2"><button class="button1"><font size="4" color="red">注册</font></button></div>
-    <div class="head-2"><font size="5" color="red">登录</font></div>
-    <div class="head-2-3"><font size="5" color="red">Aa</font></div>
+    <div class="head-2-1"><a href=""><font size="4" color="white">写文章</font></a></div>
+    <div class="head-2-2"><button class="button1"><a href=""><font size="4" color="red">注册</font></a></button></div>
+    <div class="head-2"><a href=""><font size="5" color="red">登录</font></a></div>
+    <div class="head-2-3"><a href=""><font size="5" color="red">Aa</font></a></div>
     <div style="clear:both"></div>
 </div>
 <div class="pic">
-    <div><img class="pic-1" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-2" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-3" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-4" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-5" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
+    <div><a href=""><img class="pic-1" src="/training/public/img/3.jpg"></a></div>
+    <div><a href=""><img class="pic-2" src="/training/public/img/8.png" ></a></div>
+    <div><a href=""><img class="pic-2" src="/training/public/img/1.png" ></a></div>
+    <div><a href=""><img class="pic-2" src="/training/public/img/2.png" ></a></div>
+    <div><a href=""><img class="pic-2" src="/training/public/img/5.png" ></a></div>
+    <div><a href=""><img class="pic-3" src="/training/public/img/4.png" ></a></div>
     <div style="clear:both"></div>
-    <div><img class="pic-6" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-7" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-8" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-9" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-10" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
-    <div><img class="pic-11" src="http://reso.bixiuko.com/shgu/proj/proj1/pic1.png" ></div>
+    <div><a href=""><img class="pic-6" src="/training/public/img/6.jpg" ></a></div>
+    <div><a href=""><img class="pic-7" src="/training/public/img/7.jpg"></a></div>
+    <div><a href=""><img class="pic-8"  src="/training/public/img/9.jpg"></a></div>
+    <div><a href=""><img class="pic-9"  src="/training/public/img/1.jpeg"></a></div>
+    <div><a href=""><img class="pic-10" src="/training/public/img/10.jpg"></a></div>
+    <div><a href=""><img class="pic-11" src="/training/public/img/11.jpeg"></a></div>
+    <div><a href=""><img class="pic-12" src="/training/public/img/12.jpg" ></a></div>
+    <div class="pic-13"><a href="">更多热门专题></a></div>
+</div>
+<div class="con">
+<div class="content">
+    <div class="content-1">
+        <div class="content-1-1">
+            <div class="content-1-1-1"><img class="pic-14" src="/training/public/img/13.png" >黛玉日报4小时前</div>
+            <a href=""> <div class="content-1-1-2"><b>优秀的人，凭什么要和你在一起？</b></div></a>
+            <div class="content-1-1-3">01 一直有一个这样的问题：“为什么优秀的人总是不合群？”网上最经典的答案<br/>
+                是：“优秀的人也合群，只是他们合的群里没有你。” 02 想起了自己的一些故事。<br/>
+                大学时，我遇到了一...</div>
+            <div class="content-1-1-4"></div>
+        </div>
+        <div class="content-1-2"><a href=""><img class="pic-15" src="/training/public/img/14.jpeg"></a>
+        </div>
+    </div>
+    <div class="content-2"></div>
+</div>
+<div class="content-right">
+    <div>推荐作者</div>
+    <div><a href=""><img class="content-right-1" src="/training/public/img/14.jpeg" >李谨圻</a></div>
+</div>
 </div>
 </body>
 </html>
