--- a/views/html5-css3/css/14/qqq.html
+++ b/views/html5-css3/css/14/qqq.html
@@ -86,6 +86,12 @@
                     </div>
                     <a href=""><div class="down-content">日本81岁老太自学编程</div></a>
                 </div>
+                <div class="down-a">
+                    <div class="down-pic">
+                        <a href=""><img src="/training/public/img/laotai.jpg"></a>
+                    </div>
+                    <a href=""><div class="down-content">日本81岁老太自学编程</div></a>
+                </div>
 
             </div>
         </div>
