--- a/views/html5-css3/css/10/lagouwang.css
+++ b/views/html5-css3/css/10/lagouwang.css
@@ -1,57 +1,364 @@
-header{
+
+body{
+    border: 0;
+    margin: 0;
 }
-.header-1{
-color:white;
-    height:30px;
-  background-color:black;
-    line-height:30px;
+
+header{
+    border:1px #969696 solid;
+    width:1498px;
+    height:5em;
+}
+.content{
+    width: 1024px;;
+    margin:2em 15% 0;
+    height:45em;
+}
+aside{
+    float: left;
+    width: 250px;;
+
+    background-color:#fafafa;
+}
+section{
+    float: right;
+    width: 720px;
+    height: 90%;
 }
 a{
     text-decoration: none;
-    color:gray;
+    color: gainsboro;
 }
-.lg-0{
-    color:green;
+ul li{
+    list-style: none;
+    display: inline-block;
+}
+.login{
+    height:2em;
+    color: white;
+    background-color: black;
+}
+.enter{
+    line-height:2em;
+    float: left;
+    margin-left:5%;
+}
+.app{
+    color: lawngreen;
+}
+.in{
+    height: 2em;
+    float: right;
+    margin-right:5%;
+    margin-top:0.5em;
+}
+.logo {
+    height: 3em;
+    background-color: #fafafa;
 }
 .lg{
-    position: absolute;
-    left:80px;
-    top:8px;
+    height: 3em;
+    width: 25%;
+    float: left;
+    margin-left: 15%;
+    text-align: left;
 }
-.lg-1{
-    position: absolute;
-    left:1250px;
-    top:8px;
+.pic{
+    float: left;
+    width: 9em;
+    height:3em;
+    background:url(/training/public/lagou/1.png);
+    background-size:cover;
 }
-.lg-2{
-    position: absolute;
-    left:1300px;
-    top:8px;
+.city{
+    line-height: 3em;
+    text-align: center;
+    float: left;
+    width: 10em;
 }
-.header-2{
-    height:60px;
-    border:1px solid red;
-    margin:0% 10%;
+.city b{
+    color:#2f2f2f ;
+    font-size:1.5em;
 }
-.logo{
-    margin-top:10px;
-    float:left;
+.list{
+    width: 45em;
+    height: 3em;
+    float: left;
 }
-.nav{
-    float:right;
-    padding-top:8px;
-    float:left;
+.list div{
+    width:3em;
+    height: 3em;
+    line-height: 2em;
+    float: left;
+    margin-right:1em;
+    font-size:1.6em;
 }
-.nav ul li{
-    list-style:none;
-    float:left;
-    margin-right:40px;
-    font-size:25px;
+.list a{
+    font-weight: bold;
+    color:gainsboro;
 }
-.footer{
+.list a:hover{
+    color: #2f2f2f;
+}
+.technical{
+    height:27%;
+    margin-bottom:20px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.technical h1{
+    height:15px;
+    margin-left:1.6em;
+    margin-bottom:20px;
+    text-align:left;
+}
+.technical ul{
+    height: 16px;
+    margin-bottom:10px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.technical ul li{
+    height:16px;
+    margin-right:1em;
+}
+.technical a{
+    color:#555;
+}
+.search{
+    font-size: 1em;
+    height:2em;
+}
+.search div{
+    float: left;
+}
+.input{
+    width:80%;
+    height: 1.5em;
+}
+.search input{
+    font-size: 1em;
     width:100%;
-    height:80px;
-    position: fixed;
-    top:580px;
-    border:1px solid red;
+    height: 1.5em;
+    border: solid 2px #00b38a;
+    margin: 0;
+}
+.search a{
+    color: white;
+    font-weight: bold;
+}
+.button{
+    text-align: center;
+    line-height: 1.5em;
+    height:1.8em;
+    width: 19%;
+    border: solid 1px #00b38a;
+    background-color: #00b38a;
+}
+.picture{
+    margin-top: 1em;
+    height:50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.pi{
+
+    height:40%;
+}
+.pic1{
+    float: left;
+    height:100%;
+    width: 80%;
+    background-image:url("/training/public/lagou/1.JPG");
+    background-size: cover;
+}
+.pic2{
+    width: 19%;
+    height: 100%;
+    float: right;
+
+}
+.pic2 ul{
+    float: right;
+    margin-right: 5px;
+    width: 80%;
+    height: 100%;
+    list-style: none;
+}
+ul, menu, dir {
+    display: block;
+    list-style-type: disc;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+}
+
+.pic2 ul li{
+    width: 100%;
+    height: 30%;
+    background-image:url("/training/public/lagou/5.png");
+    background-size: cover;
+    margin-bottom:4%;
+    text-align: center;
+}
+.pic ul li:hover{
+    background-image:url("/training/public/lagou/6.png");
+    background-size: cover;
+}
+.pic2 img{
+    width: 95%;
+    height: 90%;
+    margin-top: 2px;
+}
+.ul{
+    width: 100%;
+    height: 100%;
+    list-style: none;
+}
+.ul li{
+    margin-top:1em;
+    width: 15%;
+    height:75%;
+    display: inline-block;
+}
+.ul li img{
+    width: 100%;
+    height: 100%;
+}
+.introduce{
+    width: 100%;
+    height: 30px;
+    margin: 0 0 0.5em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.left{
+    width:15%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.right{
+    font-size: 18px;
+    line-height: 35px;
+    width: 85%;
+    height: 100%;
+    background-color: #f6f6f6;
+}
+.top {
+    width: 100%;
+    height: 2px;
+    background-color: #00b38a;
+}
+.bottom{
+    width: 100%;
+    height: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bottom a{
+    color: #333;
+    font-size: 18px;
+}
+.section{
+    width:100%;
+    height: 100px;
+    margin-top: 20px;
+    border-bottom:1px dashed #cccccc ;
+}
+.title,.name,.pay{
+    height:33%;
+    display: flex;
+    justify-content: space-between;
+}
+.title{
+    font-size: 16px;
+}
+.name{
+    font-size: 12px;
+    background-color: #f6f6f6;
+}
+.pay{
+    font-size: 14px;
+}
+.post,.company,.k,.type,.ask,.weal{
+    width:40%;
+}
+.post,.k,.ask{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.po{
+    margin-right: 15px;
+}
+.po a{
+    color:  #00b38a;
+}
+.time{
+    color: #999;
+}
+.company,.type,.weal,.experience{
+    display: flex;
+    align-items: center;
+    color: #333;
+
+}
+.company a{
+    color:  #00b38a;
+}
+.money{
+    font-size: 16px;
+    color: #fa6041;
+    margin-right: 15px;
+}
+.ask div{
+    margin-right: 15px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    color: #555;
+    padding: 3px;
+    border: 1px solid #dcdcdc;
+}
+footer {
+    height: 4em;
+    width: 100%;
+    z-index: 999;
+    position:fixed;
+    top:92%;
+    display: flex;
+}
+footer div{
+    flex-direction: column;
+}
+.foot1{
+    background-color: #4ecb8c;
+    height: 100%;
+    width: 70%;
+
+}
+footer a{
+    color: #fff;
+    font-size: 24px;
+    line-height: 3em;
+
+}
+.foot2{
+    background-color: #4ebb7c;
+    height: 100%;
+    width: 14%;
+    text-align: center ;
+}
+.foot3{
+    background-color: red;
+    height: 100%;
+    width: 16%;
+    text-align: center ;
 }
