--- a/views/html5-css3/html5/07/selector.html
+++ b/views/html5-css3/html5/07/selector.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        body{
+            margin:0 0;
+        }
         .em{
-            font-size:2em;
-            height:2em;
-            width:1em;
+            height:100vh;
+            display: flex;
+            flex-wrap: wrap;
+            align-content: center;
+            border:1px solid red;
+        }
+        .a{
+            height:100px;
+            width:350px;
+            border:1px solid red;
         }
     </style>
 </head>
 <body>
 <div class="em">
-wo
+    <div class="a"></div>
+    <div class="a"></div>
+    <div class="a"></div>
+    <div class="a"></div>
+    <div class="a"></div>
+    <div class="a"></div>
 </div>
 </body>
 </html>
