--- a/views/sass/1/gadol.html
+++ b/views/sass/1/gadol.html
@@ -7,36 +7,35 @@
     <title>Title</title>
     <link rel="stylesheet" href="gadot.css">
     <link rel="stylesheet" href="/training/public/font-awesome-4.7.0/css/font-awesome.css">
-
 </head>
 <body>
 <div class="container-fluid">
 <div class="row">
-    <div class="m"><i class="fa fa-navicon"></i></div>
-    <div class="m">fajfjaofjajfojsai</div>
-    <div class="m"><i class="fa fa-plus-circle"></i></div>
+    <div class="m"><i class="fa fa-navicon fa-2x"></i></div>
+    <div class="m">Gal Gadot</div>
+    <div class="m"><i class="fa fa-plus-circle fa-2x"></i></div>
 </div>
     <div class="rowe" id="bg">
 <div class="footer">
     <div class="f">
-        <font size="5">Gal Gadot,Fast Five</font>
+        Gal Gadot,Fast Five
     </div>
     <div class="f" id="h">
 m.imdb.com
     </div>
     <div class="g">
-        <div class="g1"><i class="fa fa-clock-o"></i>18.07.13</div>
-        <div class="g1"><i class="fa fa-heart-o"></i>324</div>
-        <div class="g1"><i class="fa fa-comment-o"></i>26</div>
+        <div class="g1"><i class="fa fa-clock-o fa-lg"></i>18.07.13</div>
+        <div class="g1"><i class="fa fa-heart-o fa-lg"></i>324</div>
+        <div class="g1"><i class="fa fa-comment-o fa-lg"></i>26</div>
     </div>
 </div>
     </div>
     <div class="row" id="foot">
-        <div class="m"><i class="fa fa-home"></i></div>
-        <div class="m"><i class="fa fa-square-o"></i></div>
-        <div class="m"><i class="fa fa-heart-o"></i></div>
-        <div class="m"><i class="fa fa-share-square-o"></i></div>
-        <div class="m"><i class="fa fa-comment-o"></i></div>
+        <div class="m"><i class="fa fa-home fa-2x"></i></div>
+        <div class="m"><i class="fa fa-square-o fa-2x"></i></div>
+        <div class="m"><i class="fa fa-heart-o fa-2x"></i></div>
+        <div class="m"><i class="fa fa-share-square-o fa-2x"></i></div>
+        <div class="m"><i class="fa fa-comment-o fa-2x"></i></div>
     </div>
 </div>
 </body>
