--- a/views/sass/1/gadot.sass
+++ b/views/sass/1/gadot.sass
@@ -1,6 +1,6 @@
 body
   color: white
-
+  margin: 0
 .row
   height: 10vh
   background-color: #00b3ee
@@ -21,7 +21,7 @@ body
   align-self: flex-end
 
 #foot
-  background: rgba(0,9,0,0.4)
+  background: rgba(0,0,0,0.1)
 .m
   line-height: 10vh
 .f
@@ -33,5 +33,4 @@ body
   width: 70%
   display: flex
   margin: 0 auto
-
   justify-content: space-around
